cli: Add healthz field to cilium status
